--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'no.tornado:tornadofx-controlsfx:0.1.1'
     compile 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     compile 'com.github.thomasnield:rxkotlinfx:2.2.2'
+    compile 'com.jfoenix:jfoenix:8.0.7'
 }
 
 compileKotlin {
