--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile 'de.jensd:fontawesomefx-materialdesignfont:2.0.26-9.1.2-jdk8'
     compile 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     compile 'com.github.thomasnield:rxkotlinfx:2.2.2'
+    compile 'com.1stleg:jnativehook:2.1.0'
 }
 
 compileKotlin {
