--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
     mavenCentral()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     maven { url "https://dl.bintray.com/dua3/public" }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -20,6 +21,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     compile 'com.github.thomasnield:rxkotlinfx:2.2.2'
     compile 'com.1stleg:jnativehook:2.1.0'
+    compile 'com.github.strikerx3:jxinput:ca55984'
 }
 
 compileKotlin {
